--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A framework based on Minecraft GameTest API",
   "main": "Main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "npx webpack",
+    "yalc-push": "yalc push",
+    "pack-and-push": "npx webpack & yalc push"
   },
   "author": "QianShanyao",
   "repository": "https://github.com/TenonMinecraft/TenonRepeater",
