--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@babel/core": "^7.17.8",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
-    "@minecraft/server": "^1.1.0-beta.1.19.70-stable",
+    "@minecraft/server": "^1.2.0-beta.1.19.80-preview.24",
     "@minecraft/server-ui": "^1.0.0-beta.1.19.70-stable",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
     "babel-preset-env": "^1.7.0",
     "bundle-declarations-webpack-plugin": "^4.0.1",
     "ts-loader": "^9.3.0",
-    "typescript": "^5.0.3",
+    "typescript": "^4.7.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.10.0"
   },
