--- a/package.json
+++ b/package.json
@@ -1,37 +1,52 @@
 {
-  "name": "@tenon-minecraft/server-repeater",
-  "version": "0.1.0",
-  "description": "A framework based on Minecraft GameTest API",
-  "main": "Main.ts",
+  "name": "@tendrock/ipc",
+  "version": "0.1.0-alpha",
+  "description": "",
+  "homepage": ".",
+  "private": true,
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "npx webpack",
-    "yalc-push": "yalc push",
-    "pack-and-push": "npx webpack & yalc push"
+    "test": "just-scripts test",
+    "build-scripts": "just-scripts build-scripts",
+    "deploy-scripts": "just-scripts deploy-scripts",
+    "clean": "just-scripts clean",
+    "dev": "just-scripts dev",
+    "dev-no-scripts": "just-scripts dev-no-scripts",
+    "tsc": "tsc"
   },
-  "author": "QianShanyao",
-  "repository": "https://github.com/TenonMinecraft/TenonRepeater",
-  "license": "MIT",
-  "keywords": [
-    "tenon",
-    "bedrock",
-    "server",
-    "minecraft"
+  "files": [
+    "dist",
+    "types/generated",
+    "tsconfig.json",
+    "!**/*.test.*",
+    "!**/test/**"
   ],
+  "keywords": [],
+  "author": "QianShanyao",
+  "license": "LGPL-3.0-or-later",
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@minecraft/server": "^1.2.0-beta.1.19.80-preview.24",
-    "@minecraft/server-ui": "^1.0.0-beta.1.19.70-stable",
+    "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@minecraft/server": "^1.17.0-beta.1.21.50-stable",
+    "@minecraft/server-ui": "^1.4.0-beta.1.21.51-stable",
+    "@minecraft/vanilla-data": "^1.21.50",
+    "@types/node": "^22.10.5",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^8.2.5",
     "babel-preset-env": "^1.7.0",
-    "bundle-declarations-webpack-plugin": "^4.0.1",
+    "babel-preset-react": "^6.24.1",
+    "dotenv": "^16.4.7",
+    "just-scripts": "^2.3.3",
+    "lodash": "^4.17.21",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.10.0"
-  },
-  "types": "index.d.ts"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3",
+    "uglify-js": "^3.15.5",
+    "webpack": "5.94.0",
+    "webpack-cli": "^4.9.2"
+  }
 }
