feat(ipc): 梳理项目导出并生成类型定义，为首个版本包发布做准备

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "module": "esnext",
     "target": "es6",
     "outDir": "dist",
+    "sourceMap": true,
+    "declaration": true,
+    "declarationDir": "types/generated",
     "lib": [
       "ES6",
       "ES2021",
