--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@tendrock/ipc",
-  "version": "0.1.1-alpha",
+  "version": "0.1.2-alpha",
+  "main": "dist/index.js",
   "description": "An IPC system implementation of Minecraft Community Script Protocol for Minecraft Bedrock",
   "scripts": {
     "test": "just-scripts test",
