publish: 修改版本号并编译最新版本代码

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "outDir": "dist",
     "sourceMap": true,
     "declaration": true,
+    "incremental": false,
     "declarationDir": "types/generated",
     "lib": [
       "ES6",
