chore: 补充 package.json 信息
- 在 repository 对象中添加 type 字段，设置为 git

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "QianShanyao",
   "license": "MIT",
   "repository": {
+    "type": "git",
     "url": "https://github.com/AbbottMc/tendrock-ipc"
   },
   "devDependencies": {
