publish: 现在不再生成 sourcemap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "module": "esnext",
     "target": "es6",
     "outDir": "dist",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
     "incremental": false,
     "declarationDir": "types/generated",
