--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "declaration": true,
     "incremental": false,
     "declarationDir": "types/generated",
+    "allowJs": true,
     "lib": [
       "ES6",
       "ES2021",
@@ -21,7 +22,6 @@
         "./.yalc/*"
       ]
     },
-    "allowJs": true
   },
   "include": [
     "./scripts"
